--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@strapi/plugin-users-permissions": "4.23.1",
     "@strapi/strapi": "4.23.1",
     "better-sqlite3": "8.6.0",
+    "file-saver": "^2.0.5",
     "pg": "^8.11.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
